--- a/index.html
+++ b/index.html
@@ -1,1 +1,120 @@
-<!DOCTYPE html><html><head><meta charset="utf-8"><meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no"><title>Home - Brand</title><link rel="stylesheet" href="/assets/bootstrap/css/bootstrap.min.css?h=aa56a75d716abd1b18f79dacb428ee48"><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato:300,400,700"><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css"><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/pikaday/1.6.1/css/pikaday.min.css"></head><body><nav class="navbar navbar-dark navbar-expand-lg fixed-top bg-white portfolio-navbar gradient"><div class="container"><a class="navbar-brand logo" href="#www.wracaworld.ru">WRACA(Math)</a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navbarNav"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button><div class="collapse navbar-collapse" id="navbarNav"><ul class="navbar-nav ms-auto"><li class="nav-item"><a class="nav-link active" href="/index.html">Home</a></li><li class="nav-item"><a class="nav-link" href="/Revision-mat.html">Revision Material</a></li><li class="nav-item"><a class="nav-link" href="/Quiz-tests.html">Take a Math Quiz</a></li><li class="nav-item"></li></ul></div></div></nav><main class="page lanidng-page"><section class="portfolio-block block-intro"><div class="container"><div class="avatar" style="wraca.jpg"><picture><img class="rounded-circle" src="/assets/img/wraca.jpg?h=7343909de44d55c7d9d93f66261e896b" width="140" height="175" alt="90"></picture></div><div class="about-me"><p>Welcome to the Well Revised Academy mathematics revision portal</p><a class="btn btn-outline-primary" role="button" href="Revision-tests.html">Test Your Knowledge</a></div></div></section><section class="portfolio-block photography"><div class="container"><div class="row g-0"><div class="col-md-6 col-lg-4 item zoom-on-hover"><a href="#"><img class="img-fluid image" src="/assets/img/wraca-rocket-venus.jpg?h=f50dc3bb2d7c93cc5bc54cbe3239f631"></a></div><div class="col-md-6 col-lg-4 item zoom-on-hover"><a href="#"><img class="img-fluid image" src="/assets/img/wraca-rocket-neptune.jpg?h=acee6d2b48cf4246f964ba81ab192ab7"></a></div><div class="col-md-6 col-lg-4 item zoom-on-hover"><a href="#"><img class="img-fluid image" src="/assets/img/wraca-rocket-earth.jpg?h=f03fd39f80b51ccc0a77bdf7e3177589"></a></div></div></div></section><section class="portfolio-block call-to-action border-bottom"><div class="container"><div class="d-flex justify-content-center align-items-center content"><h3>Want to support our Free revisions project?</h3><button class="btn btn-outline-primary btn-lg" type="button">Coming soon!</button></div></div></section><section class="portfolio-block skills"><div class="container"><!-- Start: portfolio heading --><div class="heading"><h2>Special Skills</h2></div><!-- End: portfolio heading --><div class="row"><div class="col-md-4"><div class="card special-skill-item border-0"><div class="card-header bg-transparent border-0"><i class="icon ion-ios-star-outline"></i></div><div class="card-body"><h3 class="card-title">Revision super sourcer</h3><p class="card-text">Wraca will go anywhere and everywhere to find relevant material for learners.</p></div></div></div><div class="col-md-4"><div class="card special-skill-item border-0"><div class="card-header bg-transparent border-0"><i class="icon ion-ios-heart"></i></div><div class="card-body"><h3 class="card-title">Caring Community</h3><p class="card-text">Wraca will never request money to purchase material from Matric learners.</p></div></div></div><div class="col-md-4"><div class="card special-skill-item border-0"><div class="card-header bg-transparent border-0"><i class="icon ion-cash"></i></div><div class="card-body"><h3 class="card-title">Growth Reward</h3><p class="card-text">Wraca will reward students on their success through NFT airdrops</p></div></div></div></div></div></section></main><section class="portfolio-block website gradient"><div class="container"><div class="row align-items-center"><div class="col-md-12 col-lg-5 offset-lg-1 text"><h3>NFT PROJECT</h3><p>WRACA Academy is dependent to it's NFT sales for operations</p></div><div class="col-md-12 col-lg-5"><div class="portfolio-laptop-mockup"><div class="screen"><div class="screen-content" style="background-image:url(&quot;/assets/img/round-1-collection.jpg?h=fc05eddd2cf7a5a997806ecd490ea5bd&quot;);"></div></div><div class="keyboard"></div></div></div></div></div></section><footer class="page-footer"><div class="container"><div class="links"></div><div class="social-icons"><a href="#facebook.com/groups/teammahzbe/?ref=share"><i class="icon ion-social-facebook"></i></a></div></div></footer><script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script><script src="https://cdnjs.cloudflare.com/ajax/libs/pikaday/1.6.1/pikaday.min.js"></script><script src="/assets/js/script.min.js?h=93ba179fa52dd72fece483aba133cf5f"></script></body></html>
+<!DOCTYPE html>
+<html>
+
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
+    <title>Home - Brand</title>
+    <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato:300,400,700">
+    <link rel="stylesheet" href="assets/fonts/ionicons.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/pikaday/1.6.1/css/pikaday.min.css">
+</head>
+
+<body>
+    <nav class="navbar navbar-dark navbar-expand-lg fixed-top bg-white portfolio-navbar gradient">
+        <div class="container"><a class="navbar-brand logo" href="#www.wracaworld.ru">WRACA(Math)</a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navbarNav"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item"><a class="nav-link active" href="index.html">Home</a></li>
+                    <li class="nav-item"><a class="nav-link" href="revision-mat.html">Revision Material</a></li>
+                    <li class="nav-item"><a class="nav-link" href="Quiz-tests.html">Take a Math Quiz</a></li>
+                    <li class="nav-item"></li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+    <main class="page lanidng-page">
+        <section class="portfolio-block block-intro">
+            <div class="container">
+                <div class="avatar" style="wraca.jpg">
+                    <picture><img class="rounded-circle" src="assets/img/wraca.jpg" width="140" height="175" alt="90"></picture>
+                </div>
+                <div class="about-me">
+                    <p>Welcome to the Well Revised Academy mathematics revision portal</p><a class="btn btn-outline-primary" role="button" href="Revision-tests.html">Test Your Knowledge</a>
+                </div>
+            </div>
+        </section>
+        <section class="portfolio-block photography">
+            <div class="container">
+                <div class="row g-0">
+                    <div class="col-md-6 col-lg-4 item zoom-on-hover"><a href="#"><img class="img-fluid image" src="assets/img/wraca-rocket-venus.jpg"></a></div>
+                    <div class="col-md-6 col-lg-4 item zoom-on-hover"><a href="#"><img class="img-fluid image" src="assets/img/wraca-rocket-neptune.jpg"></a></div>
+                    <div class="col-md-6 col-lg-4 item zoom-on-hover"><a href="#"><img class="img-fluid image" src="assets/img/wraca-rocket-earth.jpg"></a></div>
+                </div>
+            </div>
+        </section>
+        <section class="portfolio-block call-to-action border-bottom">
+            <div class="container">
+                <div class="d-flex justify-content-center align-items-center content">
+                    <h3>Want to support our Free revisions project?</h3><button class="btn btn-outline-primary btn-lg" type="button">Coming soon!</button>
+                </div>
+            </div>
+        </section>
+        <section class="portfolio-block skills">
+            <div class="container">
+                <div class="heading">
+                    <h2>Special Skills</h2>
+                </div>
+                <div class="row">
+                    <div class="col-md-4">
+                        <div class="card special-skill-item border-0">
+                            <div class="card-header bg-transparent border-0"><i class="icon ion-ios-star-outline"></i></div>
+                            <div class="card-body">
+                                <h3 class="card-title">Revision super sourcer</h3>
+                                <p class="card-text">Wraca will go anywhere and everywhere to find relevant material for learners.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="card special-skill-item border-0">
+                            <div class="card-header bg-transparent border-0"><i class="icon ion-ios-heart"></i></div>
+                            <div class="card-body">
+                                <h3 class="card-title">Caring Community</h3>
+                                <p class="card-text">Wraca will never request money to purchase material from Matric learners.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="card special-skill-item border-0">
+                            <div class="card-header bg-transparent border-0"><i class="icon ion-cash"></i></div>
+                            <div class="card-body">
+                                <h3 class="card-title">Growth Reward</h3>
+                                <p class="card-text">Wraca will reward students on their success through NFT airdrops</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
+    <section class="portfolio-block website gradient">
+        <div class="container">
+            <div class="row align-items-center">
+                <div class="col-md-12 col-lg-5 offset-lg-1 text">
+                    <h3>NFT PROJECT</h3>
+                    <p>WRACA Academy is dependent to it's NFT sales for operations</p>
+                </div>
+                <div class="col-md-12 col-lg-5">
+                    <div class="portfolio-laptop-mockup">
+                        <div class="screen">
+                            <div class="screen-content" style="background-image:url(&quot;assets/img/round-1-collection.jpg&quot;);"></div>
+                        </div>
+                        <div class="keyboard"></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <footer class="page-footer">
+        <div class="container">
+            <div class="links"></div>
+            <div class="social-icons"><a href="#facebook.com/groups/teammahzbe/?ref=share"><i class="icon ion-social-facebook"></i></a></div>
+        </div>
+    </footer>
+    <script src="assets/bootstrap/js/bootstrap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/pikaday/1.6.1/pikaday.min.js"></script>
+    <script src="assets/js/theme.js"></script>
+</body>
+
+</html>
