--- a/index.html
+++ b/index.html
@@ -13,12 +13,10 @@
 
 <body>
     <nav class="navbar navbar-dark navbar-expand-lg fixed-top bg-white portfolio-navbar gradient">
-        <div class="container"><a class="navbar-brand logo" href="#www.wracaworld.ru">WRACA(Math)</a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navbarNav"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
+        <div class="container"><a class="navbar-brand logo" href="#bit.ly/3qVIkMh">WRACA(Math)</a>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item"><a class="nav-link active" href="index.html">Home</a></li>
-                    <li class="nav-item"><a class="nav-link" href="revision-mat.html">Revision Material</a></li>
-                    <li class="nav-item"><a class="nav-link" href="Quiz-tests.html">Take a Math Quiz</a></li>
                     <li class="nav-item"></li>
                 </ul>
             </div>
@@ -31,7 +29,7 @@
                     <picture><img class="rounded-circle" src="assets/img/wraca.jpg" width="140" height="175" alt="90"></picture>
                 </div>
                 <div class="about-me">
-                    <p>Welcome to the Well Revised Academy mathematics revision portal</p><a class="btn btn-outline-primary" role="button" href="Revision-tests.html">Test Your Knowledge</a>
+                    <p>Welcome to the Well Revised Academy mathematics revision portal</p><a class="btn btn-outline-primary" role="button" href="Quiz-tests.html">Quizes coming soon</a><a class="btn btn-outline-primary" role="button" href="https://mahzbe.github.io/math-s-m">Start revising</a>
                 </div>
             </div>
         </section>
