--- a/Quiz-tests.html
+++ b/Quiz-tests.html
@@ -13,12 +13,12 @@
 
 <body>
     <nav class="navbar navbar-dark navbar-expand-lg fixed-top bg-white portfolio-navbar gradient">
-        <div class="container"><a class="navbar-brand logo" href="#">WRACA (Math)</a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navbarNav"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
+        <div class="container"><a class="navbar-brand logo" href="#bit.ly/3qVIkMh">WRACA (Math)</a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navbarNav"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item"></li>
-                    <li class="nav-item"><a class="nav-link" href="Index.html">Home</a><a class="nav-link" href="Revision-mat.html">Revision Material</a></li>
-                    <li class="nav-item"><a class="nav-link active" href="Quiz-tests.html">Take a Math Quiz</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#bit.ly/3qVIkMh">Home</a></li>
+                    <li class="nav-item"></li>
                     <li class="nav-item"></li>
                 </ul>
             </div>
@@ -68,7 +68,7 @@
                 <div class="col-md-12 col-lg-5 offset-lg-1 text">
                     <h3>NFT&nbsp; &nbsp;Project</h3>
                     <p>WRACA Rocket Collection</p>
-                    <p><button class="btn btn-primary" type="button">Mint</button>&nbsp;</p>
+                    <p><button class="btn btn-primary" type="button">Mint Coming soon!</button>&nbsp;</p>
                 </div>
                 <div class="col-md-12 col-lg-5">
                     <div class="portfolio-laptop-mockup">
