--- a/Revision-mat.html
+++ b/Revision-mat.html
@@ -13,12 +13,12 @@
 
 <body>
     <nav class="navbar navbar-dark navbar-expand-lg fixed-top bg-white portfolio-navbar gradient">
-        <div class="container"><a class="navbar-brand logo" href="#">WRACA (Math)</a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navbarNav"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
+        <div class="container"><a class="navbar-brand logo" href="#bit.ly/3qVIkMh">WRACA (Math)</a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navbarNav"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item"></li>
-                    <li class="nav-item"><a class="nav-link" href="Index.html">Home</a><a class="nav-link active" href="Revision-mat.html">Revision Material</a></li>
-                    <li class="nav-item"><a class="nav-link" href="Quiz-tests.html">Take a Math Quiz</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#bit.ly/3qVIkMh">Home</a></li>
+                    <li class="nav-item"></li>
                     <li class="nav-item"></li>
                 </ul>
             </div>
